--- a/datagetter/private.properties
+++ b/datagetter/private.properties
@@ -5,3 +5,4 @@ debugServerPort=8901
 j2eeServerId=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.30:base=Apache Tomcat 8.0.30_base
 runUser=
 platypus-js-version=5.10.34
+defaultDataSource=jdbc:postgresql://party-ples.ru:5432/spt_student [student \u043d\u0430 public]
