--- a/datagetter/WEB-INF/web.xml
+++ b/datagetter/WEB-INF/web.xml
@@ -48,6 +48,12 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+  <resource-ref>
+    <description>jdbc:postgresql://party-ples.ru:5432/spt_student [student на public]</description>
+    <res-ref-name>jdbc:postgresql://party-ples.ru:5432/spt_student [student на public]</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
   <welcome-file-list>
     <welcome-file>application-start.html</welcome-file>
   </welcome-file-list>
